--- a/src/assets/lang/language.ar.json
+++ b/src/assets/lang/language.ar.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "06B8BA88D52458F36C4F96294790BECF"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "3AFAB16F3585FD9AEA49C84DCD8D6E78"
 }
