--- a/src/assets/lang/language.cs.json
+++ b/src/assets/lang/language.cs.json
@@ -42,7 +42,7 @@
   "searchItems": "Vyhledávat položky",
   "rawMaterials": "Neopracované materiály",
   "products": "Vyrobené produkty",
-  "other": "Other",
+  "other": "Ostatní",
   "others": "Ostatní",
   "curiosities": "Zajímavosti",
   "technologies": "Zařízení",
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "D04473B931B59D6F434016331B82ECD0"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "85CD7DC56C7789CA5655B014FE802A26"
 }
