--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -348,5 +348,10 @@
   "stats": "Statistiken",
   "statAlwaysIncluded": "Immer enthalten",
   "statPossible": "Möglich",
-  "hashCode": "180FC19CEE306A9B78EF41112321F28B"
+  "translationPercentageComplete": "Übersetzung pro Sprache",
+  "useTranslationTool": "Übersetzungstool benutzen",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "B9116E3DCDBEC47535F5D740158AE0CA"
 }
