--- a/src/assets/lang/language.en.json
+++ b/src/assets/lang/language.en.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "C637C0D3E6B4C683A5FA31B757E01884"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "0FC1CFF1DAAE791723F8474D8F91938D"
 }
