--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "8F2D86499DE3105001E6164ECEC35465"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "7ECBA9076DFA57CCEDA6B5B71E13D899"
 }
