--- a/src/assets/lang/language.fr.json
+++ b/src/assets/lang/language.fr.json
@@ -25,15 +25,15 @@
   "title": "Assistant pour No Man's Sky",
   "loading": "Chargement",
   "about": "À propos",
-  "aboutContent": "Pourquoi ai-je voulu créer ceci ?\nUn jour, je jouais à No Man's Sky et j'ai voulu connaître les différentes ressources à récolter et  à fabriquer pour une nouvelle base. Je me suis alors dit que c'était plus facile de télécharger une application depuis le Play/App Store que de mettre le wiki du jeu sur mon deuxième écran. J'ai trouvé une application mais j'ai été déçu quand j'ai vu qu'il fallait payer pour avoir les recettes de construction des matériaux. Du coup, j'ai créé une application qui serait gratuite pour tous le monde. C'était aussi une excuse pour jouer avec les outils de développement.\n\nP.S. J'ai aussi un blog, Inside my mind (dans mon esprit) - par Kurt Lourens. Je ne l'utilise pas autant que je le souhaiterais mais j'ai quelque articles. Allez le voir !\n\nCette application n'est pas affiliée à Hello Games ou No Man's Sky, ses sous-produits ou à ses compagnies adjacentes dont les noms, emblèmes et produits se trouvent dans cette application.",
+  "aboutContent": "Pourquoi ai-je voulu créer cette app ?\nUn jour, je jouais à No Man's Sky et j'ai voulu connaître les différentes ressources à récolter et à fabriquer pour une nouvelle base. Je me suis alors dit que c'était plus facile de télécharger une application depuis le Play/App Store que de mettre le wiki du jeu sur mon deuxième écran. J'ai trouvé une application, mais j'ai été déçu quand j'ai vu qu'il fallait payer pour avoir les recettes de construction des matériaux. Du coup, j'ai créé une application qui serait gratuite pour tout le monde. C'était aussi une excuse pour jouer avec les outils de développement.\n\nP.S. J'ai aussi un blog, Inside my mind (dans mon esprit) - par Kurt Lourens. Je ne l'utilise pas autant que je le souhaiterais mais j'ai quelque articles. Allez le voir !\n\nCette application n'est pas affiliée à Hello Games ou No Man's Sky, ses sous-produits ou à ses compagnies adjacentes dont les noms, emblèmes et produits se trouvent dans cette application.",
   "language": "Aide à la traduction",
-  "languageContent": "J'ai besoin d'aide pour traduire cette application dans différentes langues. Je connais seulement l'anglais, l'africain et un petit peu de français.\nSi vous avez la possibilité de m'aider, faites en sorte que je le sache. \nJe mettrai les noms de ceux qui ont contribués et qui veulent être reconnus sur mon site web ! 😁",
+  "languageContent": "J'ai besoin d'aide pour traduire cette application dans différentes langues. Je connais seulement l'anglais, l'Africain et un petit peu de Français.\nSi vous avez la possibilité de m'aider, faites en sorte que je le sache. \nJe mettrai les noms de ceux qui ont contribué et qui veulent être reconnus sur mon site web ! 😁",
   "email": "Pour m'aider",
   "github": "Aller sur Github",
   "kurtsBlog": "Blog de Kurt",
   "donation": "Dons",
-  "donationDescrip": "Toute l'application est entièrement gratuite, il n'y a pas de fonctionnalités payantes. Mais créer cette application a eu un coût, tout comme les sites web hébergeurs. Si vous aimez cette application ou si vous avez des choses à signaler, vous pouvez laisser un commentaire sur Play/App Store et faites un don si vous le pouvez. Sinon vous pouvez regarder une publicité avec le bouton en dessous, merci ! 😋",
-  "noticeContent": "Joyeuse saint Valentin! J'espère que votre journée est pleine d'amour à tous les coins de toutes les galaxies! Un merci spécial à NMS_GalacticCorporate pour la création de cartes de Saint Valentin liées à NMS !",
+  "donationDescrip": "L'application est entièrement gratuite, il n'y a pas de fonctionnalités payantes. Mais créer cette application a eu un coût, tout comme les sites web hébergeurs. Si vous aimez cette application ou si vous avez des choses à signaler, vous pouvez laisser un commentaire sur Play/App Store et faites un don si vous le pouvez. Sinon vous pouvez regarder une publicité avec le bouton en dessous, merci ! 😋",
+  "noticeContent": "Joyeuse saint Valentin ! J'espère que votre journée est pleine d'amour à tous les coins de toutes les galaxies ! Un merci spécial à NMS_GalacticCorporate pour la création de cartes de Saint-Valentin liées à NMS !",
   "noticeAccept": "Accepté",
   "buyMeACoffee": "Achetez moi un café",
   "patreon": "Patreon",
@@ -42,16 +42,16 @@
   "searchItems": "Rechercher des articles",
   "rawMaterials": "Matières premières",
   "products": "Produits fabriqués",
-  "other": "Other",
+  "other": "Autre",
   "others": "Autres",
   "curiosities": "Curiosités",
-  "technologies": "Équipement",
-  "craftedUsing": "Fabrication unique",
+  "technologies": "Technologies",
+  "craftedUsing": "Élément(s) de fabrication",
   "viewAllRawMaterialsRequired": "Voir tous les matériaux requis",
   "allRawMaterialsRequired": "Tous les matériaux requis",
   "noItems": "Pas d'items",
   "refinedUsing": "Peut-être raffiné avec",
-  "refineToCreate": "Raffiné du {0} pour créer",
+  "refineToCreate": "Raffiner du {0} pour créer",
   "usedToCreate": "Utilisé pour créer",
   "similarRefinerRecipes": "Recette similaire de raffinage",
   "inputs": "À l'entrée",
@@ -68,10 +68,10 @@
   "quantity": "Quantité",
   "cooking": "Produits culinaires",
   "ingredients": "Ingrédients",
-  "cookToCreate": "Cuisinez {0} pour créer",
+  "cookToCreate": "Cuisiner {0} pour créer",
   "cookingRecipe": "Recette de cuisine",
-  "viewXMore": "Plus de détails ({0})",
-  "exploits": "Accomplissements",
+  "viewXMore": "Voir plus ({0})",
+  "exploits": "Glitch",
   "outputs": "Résultats",
   "steps": "Étapes",
   "buildings": "Pièces de construction",
@@ -122,7 +122,7 @@
   "helloGames": "Hello Games",
   "news": "Nouveautés",
   "health": "Santé & système de survie",
-  "jetpackBoost": "Boost du JetPack",
+  "jetpackBoost": "Jetpack",
   "hazardProtection": "Protection environnementale",
   "energy": "Système de survie",
   "stamina": "Endurance",
@@ -176,8 +176,8 @@
   "yes": "Oui",
   "no": "Non",
   "submit": "Soumettre",
-  "feedbackNotSubmitted": "Le retour d'informations n'a pas été soumis",
-  "feedbackSubmitted": "Le retour d'informations a été soumis",
+  "feedbackNotSubmitted": "Votre retour n'a pas été soumis",
+  "feedbackSubmitted": "Votre retour a été soumis",
   "noticeReject": "Ne me le demandez plus",
   "valentines": "Saint-Valentin",
   "viewItemsAdded": "Voir les articles ajoutés",
@@ -186,8 +186,8 @@
   "orderBy": "Trier par",
   "name": "Nom",
   "unitPrice": "Coût en unités",
-  "nanitePrice": "Prix en Nanites",
-  "quicksilverPrice": "Prix en Vif-Argent",
+  "nanitePrice": "Coût en Nanites",
+  "quicksilverPrice": "Coût en Vif-Argent",
   "isConsumable": "Consommable",
   "useNMSFont": "Utiliser la police d'écriture No Man's Sky",
   "techTree": "Arbre des technologies",
@@ -242,102 +242,102 @@
   "galacticAtlas": "Atlas Galactique",
   "legalNotice": "Cette Application n'est pas affilié avec Hello Games ou No Man's Sky, ses filiales ou ses entreprises, dont les noms, les logos et les produits sont utilisés dans cette application.",
   "czech": "Tchéque",
-  "thankYou": "Merci beaucoup !",
-  "thankYouForSubmittingFriendCode": "Merci d'avoir soumis votre code ami!",
-  "weDoNotStoreEmails": "L'app Assistant pour No Man's Sky n'enregistre pas votre email. Elle est nécessaire uniquement pour validation.",
-  "emailHashExample": "Dans notre base de données,  votre adressee-mail ressemblera à cela: ",
-  "confirmFriendCode": "Confirmer le code ami",
-  "emailBackupLink": "Si cela ne fonctionne pas, veuillez copier coller ce lien dans votre navigateur internet :",
-  "anyQuestionsReplyToThisEmail": "Si vous avez une question, répondez à cet email. Nous serons heureux de vous répondre.",
+  "thankYou": "Merci!",
+  "thankYouForSubmittingFriendCode": "Merci d'avoir soumis votre code ami !",
+  "weDoNotStoreEmails": "L'appli Assistant pour No Man's Sky ne conserve pas votre email. Nous l'utilisons pour confirmation uniquement.",
+  "emailHashExample": "Dans notre base de données, votre email apparaitra ainsi: ",
+  "confirmFriendCode": "Confirmer votre code ami",
+  "emailBackupLink": "Si cela ne fonctionne pas, copier et coller ce lien dans votre navigateur:",
+  "anyQuestionsReplyToThisEmail": "Si vous avez des questions, vous pouvez simplement répondre à cet email. Nous sommes toujours heureux de vous aider.",
   "emailSignOff": "Cordialement,",
   "emailSignOffTeam": "L'équipe AssistantNMS",
-  "needMoreHelp": "Besoin d'aide ?",
-  "weAreHereToHelp": "Nous sommes la pour vous aider.",
+  "needMoreHelp": "Besoin d'aide?",
+  "weAreHereToHelp": "Nous sommes la pour vous aider",
   "friendCodes": "Les codes ami",
   "friendCodeCopied": "Code ami copié!",
   "friendCode": "Mon code ami",
-  "pleaseCheckMailForConfirmation": "S'il vous plaît,  vérifiez votre email {0}, pour obtenir un lien de confirmation.",
-  "friendCodeNotSubmitted": "Le code ami n'a pas été soumis.",
+  "pleaseCheckMailForConfirmation": "S'il vous plait, vérifier votre adresse email {0} pour le lien de confirmation.",
+  "friendCodeNotSubmitted": "Code ami non soumis",
   "emailAddress": "Adresse email",
-  "solarPanelBatteryCalculator": "Calculatrice pour batterie / Solaire",
-  "storeDescription": "Trouver rapidement et facilement comment construire des objets ou raffiner des matériaux dans No Man's Sky.",
-  "storeFullDescription": "Vous n'avez plus besoin de défiler entre les menu de No Man's Sky pour voir comment construire un objet ou raffiner un matériaux. Cette app sera votre compagnon pendant vos parties.\n\nFeuille de route: https://trello.com/b/zbnaIiVF/public\n\nDiscord: https://discord.gg/q3aFBQM\n\n- Sauvez vos données, tout est disponible hors connexion\n- Tout les objets (meuble, marchandise, construction)\n- Planifier ce que vous devez construire\n- Interface rapide et intuitive\n- Support multi-langue (Votre aide est la bienvenue)\n- Aucun paiement requis\n- Presque Open-Source\n\nListe des contributeurs sur : https://nmsassistant.com",
-  "viewOriginalWorkOnJsFiddle": "Regarder le projet initial sur jsfiddle.net",
-  "totalPowerConsumption": "Consommation Total en KPs",
+  "solarPanelBatteryCalculator": "Calculatrice Solaire/pour Batterie",
+  "storeDescription": "Trouver simplement et rapidement comment fabriquer ou raffiner des éléments dans No Man's Sky.",
+  "storeFullDescription": "Vous n'avez plus besoin de faire défiler les menus dans No Man's Sky pour voir comment un objet est fabriqué ou deviner comment affiner une ressource. Cette application sera votre compagnon, avec toutes les recettes dont vous avez besoin. \n\nRoadmap: https://trello.com/b/zbnaIiVF/public\n\nDiscord: https://discord.gg/q3aFBQM\n\n- Sauver vos données mobiles, tout est disponible en hors connexion\n- Toutes les recettes (Ressources, Objets, et matériaux)\n- Planifier ce dont vous aurez besoin de récolter \n- Interface utilisateur ultra-rapide\n- Support multilingue (Votre aide serai très apprécié)\n- Aucun paiement in-App\n- Partiellement Open Source \n\nListe des Contributeurs sur https://nmsassistant.com",
+  "viewOriginalWorkOnJsFiddle": "Voir le travail original sur jsfiddle.net",
+  "totalPowerConsumption": "Consommation d'énergie total en kPs",
   "minimum": "Minimum",
-  "solarPanelsProduceMoreThanBatteries": "{0} Les panneaux solaires vont produire plus d'énergies que {1} batteries peux stocker!",
+  "solarPanelsProduceMoreThanBatteries": "{0} panneau(x) solaire va/vont produire plus d'énergie que {1} batterie(s) puisse(nt) stockée(s)!",
   "details": "Details",
-  "totalPowerConsumed": "Consommation d'énergie totale",
-  "totalSolarProduced": "Total d'énergie solaire produite",
-  "minimumSummary": "Résumé minimum ",
-  "recommendedSummary": "Résumé recommandé ",
-  "basedOnWorstCase": "Basé sur le pire des cas où le soleil passe directement au-dessus.",
-  "bestCaseScenarioLocation": "Le meilleur cas serait un emplacement sur la planète le plus éloigné du soleil. Cela - assez malheureusement - ne correspond généralement pas aux coordonnées des pôles planétaires. Ce sera alors toujours le lever / coucher du soleil, avec des panneaux solaires fonctionnant à 50% (25kPs) toute la journée (24h en jeu / 1800s en temps réel). Aucune pile ne serait nécessaire dans ce cas.",
-  "recommended": "Recommandé ",
+  "totalPowerConsumed": "Énergies total consumé ",
+  "totalSolarProduced": "Energie solaire total produites",
+  "minimumSummary": "Synthèse Minimum",
+  "recommendedSummary": "Synthèse recommandé",
+  "basedOnWorstCase": "Selon le scénario le plus pessimiste où le soleil passe directement au-dessus de nos têtes.",
+  "bestCaseScenarioLocation": "Le meilleur cas serait un emplacement sur la planète la plus éloignée du soleil. Ce qui, malheureusement, ne correspond généralement pas aux coordonnées du pôle de la planète. Il s'agira alors toujours du lever/coucher du soleil, avec des panneaux solaires fonctionnant à 50 % (25 kPs) toute la journée (24h dans le jeu / 1800s en temps réel). Aucune batterie ne sera nécessaire dans ce cas.",
+  "recommended": "Recommandé",
   "info": "Info",
-  "sunrise": "Levé du soleil",
-  "sunset": "Couché du soleil ",
+  "sunrise": "Lever du soleil",
+  "sunset": "Coucher de soleil",
   "night": "Nuit",
   "total": "Total",
-  "powerStored": "Énergie stocké quand la nuit tombe",
-  "powerRequired": "Énergie nécessaire quand la nuit tombe",
+  "powerStored": "Énergie stockée lorsque la nuit commence",
+  "powerRequired": "Énergie nécessaire lorsque la nuit commence",
   "powerUnused": "Énergie non utilisée",
-  "powerLost": "Énergie perdu",
+  "powerLost": "Énergie perdue",
   "inGame": "In-Game",
   "realTime": "Temps réel",
   "daytime": "Jour",
   "flatList": "Liste",
   "tree": "Arbre",
-  "onlineMeetup2020": "Meetup en ligne 2020",
+  "onlineMeetup2020": "Online Meetup 2020",
   "patrons": "Patrons",
-  "weekendMission": "Mission du week-end",
+  "weekendMission": "Mission du Week-end",
   "joinPatreon": "Rejoindre Patreon",
-  "requiresTheFollowing": "Nécessaire:",
-  "itemsRequiredConfirmedBy": "Objet nécessaire, confirmer par :",
-  "readConversation": "Lire les conversations:",
-  "spoilerAlert": "Alerte Spoilers",
-  "spoilersAhead": "Vous allez voir de possible Spoilers",
-  "conversationEnded": "Conversation terminée",
-  "prevCommunityMission": "Précédentes missions communautaire",
-  "weekendMissionVideo": "Vidéo de la mission du weekend",
-  "nextWeekendMission": "Prochaine Mission du Weekend",
-  "previousWeekendMission": "Ancienne Mission du Weekend",
+  "requiresTheFollowing": "Nécessaires:",
+  "itemsRequiredConfirmedBy": "Éléments requis, confirmés par",
+  "readConversation": "Lire la conversation",
+  "spoilerAlert": " Alerte Spoiler",
+  "spoilersAhead": "Vous êtes sur le point de voir d'éventuels spoilers",
+  "conversationEnded": "La conversation est terminée",
+  "prevCommunityMission": "Récompenses pour les missions communautaires précédentes",
+  "weekendMissionVideo": "Vidéo de la mission du Week-end",
+  "nextWeekendMission": "Prochaine mission du Week-end",
+  "previousWeekendMission": "Ancienne Mission du Week-end",
   "homepage": "Page d'accueil ",
   "defaultHomepage": "Page d'accueil par défaut",
-  "customHomepage": "Page d'accueil personnalisé",
-  "hideSpoilerWarnings": "Cacher les alertes Spoilers",
-  "failedLatestDisplayingOld": "Échec de la récupération des dernières données, affiche actuellement d'anciennes données",
+  "customHomepage": "Page d'accueil personnalisée ",
+  "hideSpoilerWarnings": "Cacher les alertes spoilers",
+  "failedLatestDisplayingOld": "Impossible d'obtenir la dernière version, affichant actuellement les anciennes données",
   "planetAddress": "Adresse planétaire",
-  "portalAddress": "Adresse du portail",
-  "rechargeThisUsing": "Recharger cet objets pour utiliser complètement:",
+  "portalAddress": "Adresse du Portail",
+  "rechargeThisUsing": "Recharger cet article utilise totalement:",
   "useXToRecharge": "Utiliser {0} pour recharger:",
-  "communitySpotlight": "Mise en vedette communautaire",
+  "communitySpotlight": "Pleins feux sur la communauté",
   "titles": "Titre",
   "owned": "Acheté",
   "notOwned": "Non acheté",
-  "playerName": "Nom du joueur",
+  "playerName": "Nom du Joueur",
   "loadMore": "Charger plus",
-  "release": "Mise a jour {0}",
-  "pendingAppStoreRelease": "En attente de la validation de l'app Store",
+  "release": "Version {0}",
+  "pendingAppStoreRelease": "En attente de l'approbation de l'App Store",
   "alienPuzzleFormat": "{0} {1} {2}",
-  "featureNotAvailable": "Fonctionnalités non disponibles",
-  "featureNotAvailableDescrip": "Cette fonctionnalité sera débloquédans {0}. Patrons ont des accèsanticipé aux nouvelles fonctionnalités, Pensez a visiter la page Patreon!",
-  "manufacturingPuzzles": "Puzzles de manufacture",
-  "appVersion": "Version d'app: {0}",
-  "gameVersion": "Version du jeu: {0}",
+  "featureNotAvailable": "Fonctionnalité non disponible",
+  "featureNotAvailableDescrip": "Cette fonction sera débloquée dans {0}. Patrons ont un accès anticipé à ces fonctionnalités. Envisager de nous soutenir !",
+  "manufacturingPuzzles": "Puzzles de fabrication",
+  "appVersion": "Version de l'appli: {0}",
+  "gameVersion": "Version de Jeu: {0}",
   "patreonAccess": "Accès Patreon",
-  "unableToLogInToGoogleAccount": "Impossible de vous connecter à votre compte Google.",
-  "pleaseAddContainer": "Veuillez ajouter un conteneur",
-  "likeNotSubmitted": "Votre \"J'aime\" n'a pas été soumis.",
-  "manufacturingFacilityRewards": "Récompenses des installations de fabrication",
-  "creditToYakuzaSuskeForCreatingHDImage": "Merci à Yakuza_Suske pour la création de versions HD de toutes les icônes d'objets du jeu!",
+  "unableToLogInToGoogleAccount": "Impossible de se connecter à votre compte Google",
+  "pleaseAddContainer": "Veuillez ajouter le conteneur",
+  "likeNotSubmitted": "Votre \"j'aime\" n'a pas été soumis",
+  "manufacturingFacilityRewards": "Récompenses pour les installations de fabrication",
+  "creditToYakuzaSuskeForCreatingHDImage": "Credit pour Yakuza_Suske pour avoir créer toutes les versions HD des images des éléments du jeu",
   "learnNewWord": "Apprendre un nouveau mot",
-  "factionStanding": "{0} dure {1}",
-  "blueprint": "Schéma",
-  "viewPossibleRewards": "Voir {0} recompense(s) potentiel.",
-  "noRewards": "Pas de récompense.",
-  "changeChoice": "Changer les choix.",
-  "unlockItemsUsingTheFactoryOverrideUnit": "Déverrouillez les éléments suivants à l'aide de l'unité de neutralisation d'usine.",
+  "factionStanding": "{0} supporte {1}",
+  "blueprint": "Schéma ",
+  "viewPossibleRewards": "Voir {0} récompense(s) potentiel(s)",
+  "noRewards": "Aucune récompense",
+  "changeChoice": "Changer de choix",
+  "unlockItemsUsingTheFactoryOverrideUnit": "Déverrouillez les éléments suivants à l'aide de l'unité de contournement de l'usine",
   "assistantApps": "AssistantApps",
   "displaySeasonalBackground": "Display Seasonal Background",
   "enabled": "Enabled",
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "6EABEBE6203DEB1C689609778C1FB778"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "7C1093D7A5E242290ED76EC6CD55F35E"
 }
