--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -42,7 +42,7 @@
   "searchItems": "Elem keresés",
   "rawMaterials": "Nyersanyagok",
   "products": "Elkészített termékek",
-  "other": "Other",
+  "other": "Egyebek",
   "others": "Egyebek",
   "curiosities": "Különlegességek",
   "technologies": "Technológiák",
@@ -94,32 +94,32 @@
   "rarity": "Ritkaság",
   "minValue": "Min. érték",
   "maxValue": "Max érték.",
-  "upgradeModule": "Upgrade Module",
-  "homeUseCompactTiles": "Home: Use Compact Tiles",
+  "upgradeModule": "Fejlesztő modul",
+  "homeUseCompactTiles": "Tömöritett nézet",
   "settings": "Beállítások",
   "appLanguage": "Jelenlegi nyelv",
   "guidesUseCompactTiles": "Guides: Use Compact Tiles",
   "darkModeEnabled": "Sötét mód bekapcsolva",
   "tradeItems": "Trade Items",
-  "tradeItem": "Trade Item",
-  "clear": "Clear",
+  "tradeItem": "Kereskedelmi termék",
+  "clear": "Töröl",
   "searchOptions": "Keresési beállítások",
   "searchResults": "Keresés eredményei",
   "updateAvailable": "Frissítés elérhető",
   "googlePlay": "Google Play",
   "appStore": "App Store",
   "blueprintCost": "Tervrajz {0} kerül",
-  "cookingValue": "Cooking Value",
+  "cookingValue": "Elkészítendő mennyiség",
   "craftable": "Barkácsolható",
   "maxStackSize": "Maximum megengedett mennyiség",
   "portals": "Átjárók",
-  "backupPortals": "Backup Portals",
-  "restorePortals": "Restore Portals",
+  "backupPortals": "Átjárók mentése",
+  "restorePortals": "Átjárók visszaállítása",
   "releaseNotes": "Jegyzetek",
   "allItems": "Minden tárgy",
   "catalogue": "Katalógus",
   "constructedTechnologies": "Barkácsolható technológiák",
-  "helloGames": "Hello Games",
+  "helloGames": "Hello Games ",
   "news": "Hírek",
   "health": "Élet",
   "jetpackBoost": "jetpack boost",
@@ -155,7 +155,7 @@
   "patched": "Kijavítva",
   "general": "Általános",
   "useMaterialTheme": "Use Material Theme",
-  "showItemBackgroundColours": "Show Item Background Colours",
+  "showItemBackgroundColours": "Dolgok háttér színének megjelenése",
   "portalsNotUploaded": "Az Átjárók nem lettek feltöltve",
   "portalsUploaded": "Az átjárók feltöltve",
   "portalsNotRestored": "Az átjárók nem lettek helyreállítva",
@@ -190,8 +190,8 @@
   "quicksilverPrice": "Quicksilver ár",
   "isConsumable": "Elfogyasztható",
   "useNMSFont": "Használd a No Man's Sky betűtípusát",
-  "techTree": "Tech Tree",
-  "inventoryManagement": "Inventory Management",
+  "techTree": "Technológia fa",
+  "inventoryManagement": "Raktár szervezés",
   "inventoryName": "Inventory név",
   "indonesian": "Indonéz",
   "galacticAddress": "Csillagközi Cím",
@@ -199,47 +199,47 @@
   "numberOfSlots": "{0} helyek",
   "nextCommunityMission": "Következő Közösségi Jutalom",
   "current": "Jelenlegi",
-  "newPortalEntry": "New Portal Entry",
-  "renamePortal": "Rename Portal",
-  "addTag": "Add Tag",
-  "useAltGlyphs": "Use Alternate Glyph Images",
-  "areYouSure": "Are you sure?",
-  "synchronize": "Synchronise",
-  "inventoryNotUploaded": "Inventory was not uploaded",
-  "inventoryUploaded": "Inventory was uploaded",
-  "inventoryNotRestored": "Inventory was not restored",
-  "inventoryRestored": "Inventory was restored",
-  "backupInventory": "Backup Inventory",
-  "restoreInventory": "Restore Inventory",
-  "favourites": "Favourites",
+  "newPortalEntry": "Új átjáró megadása ",
+  "renamePortal": "Átjáró átnevezése",
+  "addTag": "Címke hozzáadása",
+  "useAltGlyphs": "Alternatív megjelenés használata",
+  "areYouSure": "Biztos vagy benne? ",
+  "synchronize": "Szinkronizálás",
+  "inventoryNotUploaded": "A készlet nem került feltöltésre",
+  "inventoryUploaded": "A készlet feltöltve",
+  "inventoryNotRestored": "A készlet nem lett helyreállítva",
+  "inventoryRestored": "A készlet helyreállítva",
+  "backupInventory": "Készlet mentése",
+  "restoreInventory": "Készlet helyreállítása",
+  "favourites": "Kedvencek",
   "openCollective": "Open Collective",
   "repairedUsing": "Repaired Using",
-  "timers": "Timers",
-  "newTimer": "New Timer",
-  "renameTimer": "Rename Timer",
-  "startDate": "Start Date",
-  "endDate": "End Date",
-  "errorStartDateShouldNotBeAfterEndDate": "Start Date should not be after End Date",
-  "hexCoordLabel": "Hex Coordinates",
-  "icons": "Icons",
-  "coordinatesCopied": "Coordinates copied!",
-  "galacticAddressCopied": "Galactic Address copied!",
-  "privacyPolicy": "Privacy Policy",
-  "account": "Account",
-  "switchUser": "Switch User",
-  "logout": "Logout",
-  "turkish": "Turkish",
+  "timers": "Időzítők",
+  "newTimer": "Új időzítő ",
+  "renameTimer": "Időzítő átnevezése",
+  "startDate": "Kezdő dátum ",
+  "endDate": "Befejező dátum ",
+  "errorStartDateShouldNotBeAfterEndDate": "A kezdő dátum nem lehet későbbi a befejezés dátumánál",
+  "hexCoordLabel": "Hexa koordináták",
+  "icons": "Ikonok",
+  "coordinatesCopied": "Koordináták másolva",
+  "galacticAddressCopied": "Galaktikus cím másolva ",
+  "privacyPolicy": "Adatvédelemi irányelvek",
+  "account": "Felhasználói fiók ",
+  "switchUser": "Felhasználó váltás",
+  "logout": "Kijelentkezés",
+  "turkish": "Török",
   "completed": "Completed",
-  "notStarted": "Not Started",
-  "hours": "{0} hours",
-  "days": "{0} days",
+  "notStarted": "Nem kezdődött el ",
+  "hours": "{0} óra",
+  "days": "{0} nap",
   "hour": "{0} hour",
   "day": "{0} day",
   "timerComplete": "Timer Complete",
   "termsAndConditions": "Terms and Conditions",
   "legal": "Legal",
   "more": "More",
-  "galacticAtlas": "Galactic Atlas",
+  "galacticAtlas": "Galaktikus atlasz",
   "legalNotice": "This App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
   "czech": "Czech",
   "thankYou": "Thank you!",
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "B7FFAAD6CC244F7523C672B59FC5B0D1"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "F1E0EF0E061B2E9F78952073C0915F06"
 }
