--- a/src/assets/lang/language.id.json
+++ b/src/assets/lang/language.id.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "E80CDC1E1160FD1F09A3E0626DE4429B"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "F9A29D76B0C854BEEF24B169D7D020A7"
 }
