--- a/src/assets/lang/language.nl.json
+++ b/src/assets/lang/language.nl.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "48FA0C208D876B852D15DECB9E44E1DD"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "36A2E0167A8057EF849FF38979A94E1B"
 }
