--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -348,5 +348,10 @@
   "stats": "Statystyki",
   "statAlwaysIncluded": "Zawsze uwzględnione",
   "statPossible": "Możliwe",
-  "hashCode": "1A63A52919A3C14E840F3E5D72189CDA"
+  "translationPercentageComplete": "Tłumaczenia na język",
+  "useTranslationTool": "Użyj narzędzia do tłumaczeń",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "838471851F9E037A710717FEAF30E88B"
 }
