--- a/src/assets/lang/language.pt.json
+++ b/src/assets/lang/language.pt.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "6D17EF136CB7C7B6A78E08654C14271D"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "3AB1B60A35500306592481AD906F60B6"
 }
