--- a/src/assets/lang/language.ro.json
+++ b/src/assets/lang/language.ro.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "E3CC0F73D317F5AE3BE01F53E49436FD"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "67A841EFBD1796FFA4111DFEA692662C"
 }
