--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "BD1436F6FBB148C5A513D112342F58CF"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "EE8F4934253E75314E587B6B9DAEE889"
 }
