--- a/src/assets/lang/language.tr.json
+++ b/src/assets/lang/language.tr.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "0539A5640B1AECF24F1EC7AB4E969D2C"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "53DB7EFB48476C06AFF4F85B38D437C7"
 }
