--- a/src/assets/lang/language.zh-hans.json
+++ b/src/assets/lang/language.zh-hans.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "FD2DA10009256F454365FCEB3D900107"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "B9878DAFB18CF2EAC26F4770B031F7F4"
 }
