--- a/src/assets/lang/language.zh-hant.json
+++ b/src/assets/lang/language.zh-hant.json
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "9C395698DAF8E5BB48FCED30EA936134"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "BCC767EC80AC252C017747AEE00A7C9F"
 }
