--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -38,11 +38,11 @@
   "buyMeACoffee": "Offrimi un caffe'",
   "patreon": "Patreon",
   "paypal": "PayPal",
-  "kofi": "Ko-fi",
+  "kofi": "Ko-fi\n\n",
   "searchItems": "Cerca Oggetti",
   "rawMaterials": "Materie prime",
   "products": "Prodotti creati",
-  "other": "Other",
+  "other": "Altro",
   "others": "Altri",
   "curiosities": "Oggetti bizzarri",
   "technologies": "Equipaggiamento",
@@ -106,8 +106,8 @@
   "searchOptions": "Opzioni di Ricerca",
   "searchResults": "Risultati della Ricerca",
   "updateAvailable": "Aggiornamento Disponibile",
-  "googlePlay": "Google Play",
-  "appStore": "App Store",
+  "googlePlay": "Google Play\n\n",
+  "appStore": "App Store\n\n",
   "blueprintCost": "Prezzo progetti",
   "cookingValue": "Valore del cucinato",
   "craftable": "Costruibile",
@@ -119,7 +119,7 @@
   "allItems": "Tutti gli oggetti",
   "catalogue": "Catalogo",
   "constructedTechnologies": "Tecnologia costruita",
-  "helloGames": "Hello Games",
+  "helloGames": "Hello Games\n\n",
   "news": "Novità",
   "health": "Salute e supporto vitale",
   "jetpackBoost": "Jet pack",
@@ -224,7 +224,7 @@
   "icons": "Icone",
   "coordinatesCopied": "Coordinate copiate!",
   "galacticAddressCopied": "Indirizzo galattico copiato!",
-  "privacyPolicy": "Privacy Policy",
+  "privacyPolicy": "Politica sulla Riservatezza",
   "account": "Account",
   "switchUser": "Cambia utente",
   "logout": "Logout",
@@ -302,7 +302,7 @@
   "weekendMissionVideo": "Video Missioni del Weekend",
   "nextWeekendMission": "Missioni del prossimo Weekend",
   "previousWeekendMission": "Missioni dello scorso Weekend",
-  "homepage": "Home Page",
+  "homepage": "Pagina Principale",
   "defaultHomepage": "Home page predefinita",
   "customHomepage": "Home page personalizzata",
   "hideSpoilerWarnings": "Nascondi avvisi spoiler",
@@ -332,7 +332,7 @@
   "manufacturingFacilityRewards": "Ricompense per gli stabilimenti di produzione",
   "creditToYakuzaSuskeForCreatingHDImage": "Ringraziamo Yakuza_Suske per aver creato versioni HD di tutte le icone degli oggetti di gioco",
   "learnNewWord": "Impara nuova parola",
-  "factionStanding": "{0} standing {1}",
+  "factionStanding": "{0} Reputazione Aumentata {1}",
   "blueprint": "Progetto",
   "viewPossibleRewards": "Vedi possibili premi",
   "noRewards": "Nessun premio",
@@ -348,5 +348,10 @@
   "stats": "Stats",
   "statAlwaysIncluded": "Always included",
   "statPossible": "Possible",
-  "hashCode": "F3C653ABBC290E84D56458F6EDCF68A7"
+  "translationPercentageComplete": "Translation per Language",
+  "useTranslationTool": "Use Translation Tool",
+  "norwegian": "Norwegian",
+  "nmsfm": "NMSFM",
+  "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "hashCode": "D00035998DA6C008666727FFE0DE45BC"
 }
