--- a/src/assets/lang/language.no.json
+++ b/src/assets/lang/language.no.json
@@ -22,154 +22,154 @@
   "weekendMissionSeason1Json": "en/WeekendMissionsSeason1.lang",
   "weekendMissionSeason2Json": "en/WeekendMissionsSeason2.lang",
   "weekendMissionSeason3Json": "en/WeekendMissionsSeason3.lang",
-  "title": "Alle Resepte",
-  "loading": "Laai tans",
-  "about": "Meer inligting",
-  "aboutContent": "Hoekom het ek die moeite gedoen om dit op te bou? \r\nEendag het ek No Man's Sky gespeel en wou beplan watter landbouhulpbronne ek op 'n nuwe basis moes hê, het ek gedink dat dit makliker sou wees om 'n toep van die Play/App Store af te laai as om die wiki oop te maak op my tweede monitor. Ek het 'n app gekry en is deur 'n betaalmuur gestop toe ek probeer het om na die resepte vir vervaardigde materiale te kyk. Geïrriteerd het ek besluit om 'n toep te maak wat almal gratis kan gebruik. Dit was ook 'n wonderlike verskoning om 'n bietjie met toep ontwikkeling in Flutter te speel. \r\n \r\nP.S. Ek het ook 'n blog, Inside my Mind - deur Kurt Lourens. Ek het dit nog nie soveel gebruik as wat ek kon nie, maar ek het 'n paar artikels daar😋.",
-  "language": "Help met tale",
-  "languageContent": "Ek het hulp nodig om hierdie app in verskeie tale te vertaal. Ek ken net Engels en Afrikaans en 'n klein bitjie Frans. \r\n As u bereid is om te help, laat weet my asb. \r\n Ek sal die name van diegene wat bygedra het en erkenning wil hê op die webwerf plaas 😁",
-  "email": "Bied hulp aan",
-  "github": "Gaan na Github",
-  "kurtsBlog": "Kurt's Blog",
-  "donation": "Donasies",
-  "donationDescrip": "Alle funksies van die toep is aan u beskikbaar, daar is geen betaalmure nie. Daar is egter kostes verbonde om 'n toep te maak en die aanbied van webwerwe, dus sal skenkings my aanhelp. As u van hierdie toep hou, gee my 'n resensie in die Play/App Store en maak 'n skenking as u kan. \n As u nie 'n skenkink kan maak nie, moet u nie daaroor bekommer nie 😋",
-  "noticeContent": "Gelukkige Valentynsdag! Hoop jou dag is vol liefde uit elke uithoek van al die sterrestelsels! Spesiale dank aan die NMS_GalacticCorporate vir die maak van NMS verwante Valentynsdagkaarte!",
-  "noticeAccept": "Aanvaar",
-  "buyMeACoffee": "Buy me a Coffee",
-  "patreon": "Patreon",
-  "paypal": "PayPal",
-  "kofi": "Ko-fi",
-  "searchItems": "Soek Items",
-  "rawMaterials": "Grondstowwe",
-  "products": "Gemaakte produk",
-  "other": "Other",
-  "others": "Ander",
-  "curiosities": "Nuuskierighede",
-  "technologies": "Tegnologie",
-  "craftedUsing": "Gemaak met behulp van",
-  "viewAllRawMaterialsRequired": "Kyk na alle benodigde rou materiale",
-  "allRawMaterialsRequired": "Alle benodigde rou materiale: ",
-  "noItems": "Geen items nie",
-  "refinedUsing": "Verfyn deur",
-  "refineToCreate": "Verfyn {0} om die volgende te maak",
-  "usedToCreate": "Word gebruik om die volgende te maak",
-  "similarRefinerRecipes": "Soortgelyke Verfyning Resepte",
-  "inputs": "Insette",
-  "output": "Uitset",
-  "help": "Help",
-  "close": "Maak Toe",
-  "apply": "Pas Toe",
-  "edit": "Maak veranderinge",
-  "delete": "Vee Uit",
-  "deleteAll": "Vee alles uit",
-  "cart": "Mandjie",
-  "cartContent": "Druk en hou om item uit te vee",
-  "noCartItems": "Geen items in die Mandjie nie",
-  "quantity": "Hoeveelheid",
-  "cooking": "Kook",
-  "ingredients": "Bestandele",
-  "cookToCreate": "Kook om {0} te maak",
-  "cookingRecipe": "Kook Met",
-  "viewXMore": "Wys Alles ({0} meer)",
-  "exploits": "Ontginnings",
-  "outputs": "Uitsete",
-  "steps": "Stappe",
-  "buildings": "Geboue",
-  "blueprintFrom": "Bouplanne van",
-  "unknown": "Onbekend",
-  "manufacturingFacility": "Vervaardiging Fasiliteit",
-  "manufacturingFacilityOrPolo": "Vervaardiging Fasiliteit of Polo in die Space Anomaly",
-  "portalLibrary": "Portaalstoor",
-  "savedPortalCoordinates": "Gestoorde Portaalkoördinate",
-  "noPortalItems": "Geen Gestoorde Portale Nie",
-  "add": "Voeg By",
-  "search": "Soek",
-  "advancedSearch": "Gevorderde Soek",
-  "searchGuide": "Soek Gidse",
-  "guides": "Gidse",
-  "minutes": "{0} minutes",
-  "itemName": "Item Naam",
-  "type": "Tipe",
-  "group": "Groep",
-  "rarity": "Skaarsheid",
-  "minValue": "Min Waarde",
-  "maxValue": "Maks Waarde",
-  "upgradeModule": "Opgradeer Module",
-  "homeUseCompactTiles": "Tuis: Gebruik Kompak Teëls",
-  "settings": "Instellings",
-  "appLanguage": "Huidige Taal",
-  "guidesUseCompactTiles": "Gidse: Gebruik Kompak Teëls",
-  "darkModeEnabled": "Donker Modus",
-  "tradeItems": "Ruil Items",
-  "tradeItem": "Ruil Item",
-  "clear": "Maak skoon",
-  "searchOptions": "Soek Opsies",
-  "searchResults": "Soek Resultate",
-  "updateAvailable": "Opdatering Beskikbaar",
+  "title": "alle oppskrifter",
+  "loading": "laster",
+  "about": "om",
+  "aboutContent": "Hvorfor gadd jeg å bygge dette? En dag spilte jeg No Man's Sky og ønsket å planlegge hvilke jordbruksressurser jeg skulle ha på en ny base, jeg tenkte at det ville være lettere å vare ned en app fra Play / App Store enn å trekke opp wiki-en på min andre skjerm. Jeg fant en app og ble truffet med en horde med betalinger da jeg prøvde å se på oppskriftene på laget materiale, irritert bestemte meg meg for å lage en app som ville være gratis for alle å bruke. Det var også en god unnskyldning for å spille litt med Flutter-apputviklingen. PS Jeg har også en blogg, Inside my Mind - av Kurt Lourens. Jeg har ikke brukt det så mye jeg kunne ha, men jeg har noen artikler😋. Denne appen er ikke tilknyttet Hello Games eller No Man's Sky, datterselskapene eller morselskapene, hvis navn, logoer og produkter vises i denne appen.",
+  "language": "språk hjelp",
+  "languageContent": "\nJeg trenger litt hjelp til å oversette denne appen til flere språk. Jeg kan bare engelsk og afrikaans og en liten mengde fransk. Gi meg beskjed hvis du er villig til å hjelpe. Jeg vil sette navnene på de som bidro og ønsker anerkjennelse på nettstedet",
+  "email": "tilby hjelp",
+  "github": "gå til github",
+  "kurtsBlog": "kurt`s blogg",
+  "donation": "donasjoner ",
+  "donationDescrip": "Alle funksjonene i appen er tilgjengelige for deg, det er ingen  Imidlertid betalninger men det er  kostnadene forbundet med å lage Apps og hosting nettsteder, så donasjoner hjelper meg. Hvis du liker denne appen, kan du gi meg en anmeldelse i Play / App Store og donere hvis du kan",
+  "noticeContent": "\nGod valentinsdag! Håper dagen din er full av kjærligheten fra hvert hjørne av alle galaksene! Spesiell takk til NMS Galactic Corporate for å lage NMS-relatert Valentinsdagskort!\nSENDE INN",
+  "noticeAccept": "godkjenn",
+  "buyMeACoffee": "kjøp meg en kaffe",
+  "patreon": "mine samarbeidspartnere",
+  "paypal": "paypal",
+  "kofi": "ko-fi prøver få licens for å utvikle app for ios",
+  "searchItems": "søk gjennom tingene dine",
+  "rawMaterials": "råmaterialer",
+  "products": "produserte produkter",
+  "other": "andre",
+  "others": "andre",
+  "curiosities": "\nKuriositet",
+  "technologies": "utstyr",
+  "craftedUsing": " du trenger .. for å lage",
+  "viewAllRawMaterialsRequired": "Alle råmatrialer",
+  "allRawMaterialsRequired": "alle råmatrialer ",
+  "noItems": "ingen råmatrialer lastet",
+  "refinedUsing": "raffinert fra",
+  "refineToCreate": "raffiner for å lage",
+  "usedToCreate": "Bruk for å lage",
+  "similarRefinerRecipes": "lignende oppskrifter",
+  "inputs": "ingredienser ",
+  "output": "produkt ",
+  "help": "Hjelp",
+  "close": "lukk",
+  "apply": "skru på/legge til",
+  "edit": "redigere",
+  "delete": "Slett",
+  "deleteAll": "Slett alle",
+  "cart": "Dine ressurser",
+  "cartContent": "Klikk hold for sletting av ting",
+  "noCartItems": "Ingen ting i kartoteket",
+  "quantity": "Hvor mye av",
+  "cooking": "produserte oppskrifter",
+  "ingredients": "ingredienser",
+  "cookToCreate": "kok for å lage",
+  "cookingRecipe": "koke oppskrifter",
+  "viewXMore": "se alle/ mere",
+  "exploits": "tips og triks",
+  "outputs": "produkt",
+  "steps": "hvordan lage",
+  "buildings": "deler",
+  "blueprintFrom": "Blåkopi fra",
+  "unknown": "Ukjent\n",
+  "manufacturingFacility": "Produksjons fasilitet",
+  "manufacturingFacilityOrPolo": "produksjons fasilitet eller Polo på space anomaly",
+  "portalLibrary": "Portal bibliotek",
+  "savedPortalCoordinates": "Lagrede Portal kordinater",
+  "noPortalItems": "Ingen portal lagret",
+  "add": "Legg til",
+  "search": "Søk",
+  "advancedSearch": "Avansert søk",
+  "searchGuide": "Søk i guidene",
+  "guides": "guides",
+  "minutes": "minutter",
+  "itemName": "Navn ",
+  "type": "sort",
+  "group": "gruppe",
+  "rarity": "Raritet",
+  "minValue": "minimum verdi",
+  "maxValue": "Maksimal verdi",
+  "upgradeModule": "Oppgraderings modul",
+  "homeUseCompactTiles": "bruk kompakt",
+  "settings": "Instillinger",
+  "appLanguage": "nåværende språk",
+  "guidesUseCompactTiles": "Guides bruk kompakt ",
+  "darkModeEnabled": "Mørk bakrunn",
+  "tradeItems": "Byttehandel varer",
+  "tradeItem": "Bytte vare",
+  "clear": "",
+  "searchOptions": "søker valg",
+  "searchResults": "Søker resultat",
+  "updateAvailable": "oppdatering tilgjengelig",
   "googlePlay": "Google Play",
   "appStore": "App Store",
-  "blueprintCost": "Bouplan Koste",
-  "cookingValue": "Kook Waarde",
-  "craftable": "Items wat gemaak kan word",
-  "maxStackSize": "Maksimum Stapel",
-  "portals": "Portale",
-  "backupPortals": "Rugsteun Portale",
-  "restorePortals": "Herstel Portale",
-  "releaseNotes": "Vrystellings notas",
-  "allItems": "Alle Items",
-  "catalogue": "Katalogus",
-  "constructedTechnologies": "Geskepte tegnologieë",
+  "blueprintCost": "Blåkopi kostnad",
+  "cookingValue": "oppskrifts verdi",
+  "craftable": "produserbar",
+  "maxStackSize": "Maksimal stabling",
+  "portals": "",
+  "backupPortals": "reserve portal",
+  "restorePortals": "Gjenopprett portaler",
+  "releaseNotes": "Versjonsmerknader",
+  "allItems": "Alle tingene",
+  "catalogue": "katalog",
+  "constructedTechnologies": "Teknologi",
   "helloGames": "Hello Games",
-  "news": "Nuus",
-  "health": "Gesondheid & Lewens Ondersteuning",
+  "news": "Nyheter",
+  "health": "Helse & livstøtte",
   "jetpackBoost": "Jetpack",
-  "hazardProtection": "Herlaai Gevaarbeskerming",
-  "energy": "Lewens Ondersteuning",
-  "stamina": "stamina",
-  "duration": "duur",
+  "hazardProtection": "Ladd farebeskyttelse",
+  "energy": "Liv",
+  "stamina": "utholdenhet",
+  "duration": "Varighet",
   "nmsWebsite": "nomanssky.com",
-  "common": "Algemeen",
-  "uncommon": "Ongewoon",
-  "rare": "Skaars",
-  "seconds": "{0} seconds",
-  "timeToMake": "Tyd om Produk te Maak:",
-  "discord": "Discord",
+  "common": "vanlig",
+  "uncommon": "Uvanlig",
+  "rare": "Sjelden",
+  "seconds": "Sekunder",
+  "timeToMake": "Tid til å lage",
+  "discord": "Uenighet",
   "twitter": "Twitter",
-  "contributors": "Bydraers",
-  "english": "English",
-  "afrikaans": "Afrikaans",
-  "dutch": "Nederlands",
-  "french": "Fraans",
-  "german": "Duits",
-  "italian": "Italiaans",
-  "portuguese": "Portugees",
-  "brazilianPortuguese": "Brasiliaanse Portugees",
-  "polish": "Pools",
-  "russian": "Russies",
-  "spanish": "Spaans",
-  "hungarian": "Hongaars",
-  "simplifiedChinese": "Vereenvoudigde Sjinees",
-  "traditionalChinese": "Tradisionele Sjinees",
-  "communityMission": "Gemeenskaps Missie",
-  "communityMissionContent": "Die Space Anomaly versamel navorsingsdata van reisigers oor verskillende realiteite. \r\n\r\nNamate verdere universele gegewens ingedien word, sal die Quicksilver Synthesis Companion addisionele versamelstukke ontsluit.",
-  "patched": "Reggemaak",
-  "general": "Oor die algemeen",
-  "useMaterialTheme": "Gebruik Material Tema",
-  "showItemBackgroundColours": "Wys Item Agtergrond Kleure",
-  "portalsNotUploaded": "Portale was nie opgelaai nie",
-  "portalsUploaded": "Portale opgelaai",
-  "portalsNotRestored": "Portale nie herstel nie",
-  "portalsRestored": "Portale herstel",
-  "error": "Fout",
-  "success": "Sukses",
-  "romanian": "Roemeens",
-  "whatIsNew": "Wat is nuut",
-  "newItem": "Nuut",
-  "somethingWentWrong": "Iets het verkeerd geloop",
-  "researchProgress": "Navorsingsvordering",
-  "communityLinks": "Gemeenskapskakels",
-  "social": "Social",
-  "shareContent": "I'm using the Assistant for No Man's Sky App! Available on Google Play and iOS App Store #NoMansSky #AssistantNMS #Android #IOS",
+  "contributors": "Bidragsytere\n",
+  "english": "Engelsk",
+  "afrikaans": "Afrikansk",
+  "dutch": "\nnederlandsk",
+  "french": "Fransk",
+  "german": "Tysk",
+  "italian": "Italiensk",
+  "portuguese": "Portugisisk",
+  "brazilianPortuguese": "Brasiliansk portugisisk",
+  "polish": "polsk",
+  "russian": "Russisk",
+  "spanish": "Spansk",
+  "hungarian": "Ungarsk",
+  "simplifiedChinese": "enkel kinesisk",
+  "traditionalChinese": "Tradisjonell kinesisk",
+  "communityMission": "Samfunnsoppdrag",
+  "communityMissionContent": "Space Anomaly samler forskningsdata fra reisende på tvers av flere virkeligheter. Etter hvert som ytterligere universelle data sendes inn, vil Quicksilver Synthesis Companion låse opp flere samleobjekter.",
+  "patched": "Lappet",
+  "general": "Generell",
+  "useMaterialTheme": "\nBruk materialtema",
+  "showItemBackgroundColours": "Vis bakgrunnsfarge ",
+  "portalsNotUploaded": "Portalene ble ikke lastet opp",
+  "portalsUploaded": "portaler opplastet",
+  "portalsNotRestored": "Portalene ble ikke gjenopprettet",
+  "portalsRestored": "Portaler gjennopprettet",
+  "error": ".Snerk..",
+  "success": "Suksess",
+  "romanian": "Rumensk",
+  "whatIsNew": "Hva er nytt?",
+  "newItem": "Ny",
+  "somethingWentWrong": "Noe gikk galt",
+  "researchProgress": "Forsknings framgang",
+  "communityLinks": "Community Links",
+  "social": "Sosialt",
+  "shareContent": "Jeg bruker Assistent for No Man's Sky App! Tilgjengelig på Google Play og iOS App Store #NoMansSky #AssistantNMS #Android #IOS",
   "shareTitle": "Assistant for No Man's Sky App!",
   "share": "Share",
   "feedback": "Feedback",
@@ -353,5 +353,5 @@
   "norwegian": "Norwegian",
   "nmsfm": "NMSFM",
   "nmsfmSubtitle": "Music for Travelers by Travelers",
-  "hashCode": "9B9D0E21996E45895829BADD8F5E80CA"
+  "hashCode": "CE2AE108A1F6163D9DDBFD9C00D26C36"
 }
